--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "vue-test",
+  "name": "vue-quickfix-biome-test",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check build-only",
+    "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "vue": "^3.4.29"
   },
   "devDependencies": {
-    "@tsconfig/node18": "^2.0.0",
-    "@types/node": "^18.16.3",
-    "@vitejs/plugin-vue": "^4.2.1",
-    "@vue/tsconfig": "^0.3.2",
-    "npm-run-all": "^4.1.5",
-    "typescript": "~5.0.4",
-    "vite": "^4.3.4",
-    "vue-tsc": "^1.6.4"
+    "@tsconfig/node20": "^20.1.4",
+    "@types/node": "^20.14.5",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/tsconfig": "^0.5.1",
+    "npm-run-all2": "^6.2.0",
+    "typescript": "~5.4.0",
+    "vite": "^5.3.1",
+    "vue-tsc": "^2.0.21"
   }
 }
